--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,7 @@
                                     </ul>
                                 </li>
                                 <li><a href="#dosierung">Dosierung und Termin der Applikation</a></li>
-                                <li><a href="#downloads">Artikel</a></li>
+                                <li><a href="#artikel">Artikel</a></li>
                                 <li><a href="#bestellen">Bestellen</a></li>
                                 <li><a href="#kontakt">Kontakt</a></li>
                             </ul>
